<resources>
    <string name="app_name">IntakeVisor</string>
    <!-- Strings related to login -->
    <string name="capture">Capture photo</string>
    <string name="gallery_preview">Gallery preview</string>
    <string name="currentDay">Today</string>
    <string name="previous_day_label">&lt;</string>
    <string name="next_day_label">&gt;</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="addFood">ADD FOOD +</string>
    <string name="food_icon">Food Icon</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="welcome_title">Let\'s save a little bit of me, sweetie :)</string>
    <string name="welcome_done_btn">Done</string>
    <string name="ageTitle">Age: %1$d</string>
    <string name="heightTitle">Height: %1$d cm</string>
    <string name="settingsHeightTitle">Current height: %1$d cm</string>
    <string name="weightTitle">Weight: %1$d kg</string>
    <string name="settingsWeightTitle">Current weight: %1$d kg</string>
    <string name="welcome_goals_title">And what\'s my goal?</string>
    <string name="weightGoalTitle">I want to weigh\n%1$d kilograms.</string>
    <string name="gender_image_description">Selected gender</string>
    <string name="settings_weight_goal_title">Goal weight: %1$d kg</string>
    <string name="settings_header">Profile</string>
    <string name="message_input_hint">Type a message…</string>
    <string name="chat_title">Assistant chat.\n Messages wont be saved.</string>
    <string name="birthDateTitle">Birth:</string>
    <string name="gender_name_man">I\'m a male</string>
    <string name="gender_name_woman">I\'m a female</string>
    <string name="welcome_age_title">I was born in…</string>
    <string name="selectedWeekLabel">Selected days range: %s</string>
    <string name="calendar_days_selector">Select a report days range.</string>
    <string name="month_year_text_label">%s %d</string>
    <string name="previous_month_label">&lt;</string>
    <string name="next_month_label">&gt;</string>
    <string name="download_report_btn">Download</string>
    <string name="nutrition_info">%s. Calories: %.2f</string>
</resources>