<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/day_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/currentDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/currentDay"
            android:textSize="18sp"
            android:fontFamily="@font/sf_pro_text"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/previousDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/currentDay"
            app:layout_constraintEnd_toStartOf="@+id/currentDay"
            app:layout_constraintTop_toTopOf="@+id/currentDay"
            android:background="@drawable/day_switch_button_background"
            android:text="@string/previous_day_label"
            android:fontFamily="@font/sf_pro_bold"
            android:textSize="16sp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/nextDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/currentDay"
            app:layout_constraintStart_toEndOf="@+id/currentDay"
            app:layout_constraintTop_toTopOf="@+id/currentDay"
            android:background="@drawable/day_switch_button_background"
            android:text="@string/next_day_label"
            android:fontFamily="@font/sf_pro_bold"
            android:textSize="16sp"
            android:textColor="#000000" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Meals Section -->
    <LinearLayout
        android:id="@+id/mealsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/day_switcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Breakfast Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/breakfastTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:fontFamily="@font/sf_pro_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                android:background="#D3D3D3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addBreakfast"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1" />

            <Button
                android:id="@+id/addBreakfast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#F0F0F0"
                android:textSize="12sp"
                android:text="@string/addFood"
                android:fontFamily="@font/sf_pro_bold"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/breakfastTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="0.67" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/breakfastFoodList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1" />

        <!-- Repeat for Lunch Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lunchTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:fontFamily="@font/sf_pro_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                android:background="#D3D3D3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addLunch"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1" />

            <Button
                android:id="@+id/addLunch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#F0F0F0"
                android:textSize="12sp"
                android:text="@string/addFood"
                android:fontFamily="@font/sf_pro_bold"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/lunchTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="0.67" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lunchFoodList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1" />

        <!-- Dinner Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dinnerTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:fontFamily="@font/sf_pro_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingVertical="3dp"
                android:background="#D3D3D3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addDinner"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1" />

            <Button
                android:id="@+id/addDinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#F0F0F0"
                android:textSize="12sp"
                android:text="@string/addFood"
                android:fontFamily="@font/sf_pro_bold"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/dinnerTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="0.67" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dinnerFoodList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
